	* Reproducible dungeon layout. Set OPTIONS=seed:number to get the same
	  dungeon layout.
	* Vault Guards get angry if you eat gold in front of them. (From Nethack 
		 Development Code - used with permission)
	* Several cosmetic changes - additional engravings, hallucinatory monsters, and funny messages.
	* Picking up scrolls of scare monsters change BUC from blessed to
	  uncursed to cursed

	* item changes:
	  - Decreased weight of all mithril armor, especially ones of elven make

	* user interface improvements:
	  - Added naming last broken object to #name menu (idea from AceHack/NH4)
	  - Automatically identify scrolls of scare monster during pickup when
	    turning to dust or changing known BUC state
	  - Don't autopickup unpaid items (from NetHack 3.6)
	  - Change default of shopkeeper sell prompt to 'n' (idea by aosdict)

	* dungeon layout:
	  - Backyard of watery castle get trap doors to ensure player can
	    descend to the VotD
	  - Replaced lava with water on lava castle

	* bug fixes
	  - Fixed erroneous messages when remaining in stinking clouds
	  - Shopkeeper stopping player from entering a shop when having crystal
	    picks in the inventory
	  - Fixed improper explosion behavior for wand of fire and wand of cold (reported by Stenno)
	  - Fixed crash when drained troll corpse evaporated but rot timer was
	    still set on invalid pointer
	  - Correctly identify uncursed items in bags dropped on altars when hallucinating
	  - Prevent potential endless when praying and using perma hallucination
	  - Fixed crash with a configured nameempty option (found and fixed by tertium)
	  - Fixed crash in X11 inventory
	  - Fixed possible endless loop in autotravel on the Rogue level
	  - Fixed lava breath related crash at the edges of the map

	* vanilla bug fixes:
	  - C343-439: Running NetHack in a terminal window with more than 255
	              rows or columns produces display errors.